force-app/main/default/objects/APXTConga4__Conga_Template__c/APXTConga4__Conga_Template__c.object-meta.xml
<CustomObject>
    <description>Template manager for use with Conga Composer and Conga Mail Merge.</description>
    <label>Conga Template</label>
    <nameField>
        
        <displayFormat>CMT-{00000}</displayFormat>
        
        <label>Template Name</label>
        
        <type>AutoNumber</type>
        
    </nameField>
    <pluralLabel>Conga Templates</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>