force-app/main/default/objects/APXTConga4__Conga_Template__c/fields/Anchor__c.field-meta.xml
<CustomField>
    <fullName>Anchor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anchor</label>
    <type>Checkbox</type>
</CustomField>