force-app/main/default/objects/APXTConga4__Conga_Template__c/fields/APXTConga4__Template_Type__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Template_Type__c</fullName>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Document</fullName>
                
                    <default>true</default>
                
                    <label>Document</label>
                
                </value>
            
                <value>
                
                    <fullName>Label</fullName>
                
                
                    <label>Label</label>
                
                </value>
            
                <value>
                
                    <fullName>Envelope</fullName>
                
                
                    <label>Envelope</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>