force-app/main/default/objects/APXTConga4__Conga_Template__c/fields/Brand_Key__c.field-meta.xml
<CustomField>
    <fullName>Brand_Key__c</fullName>
    <label>Brand Key</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>Client_Logo_Filenames</valueSetName>
        
        </valueSet>
</CustomField>