force-app/main/default/objects/APXTConga4__Conga_Template__c/fields/Max_Number_of_UASBs__c.field-meta.xml
<CustomField>
    <fullName>Max_Number_of_UASBs__c</fullName>
    <label>Max Number of UASBs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>