force-app/main/default/objects/APXTConga4__Conga_Template__c/fields/Number_of_Pages_in_Template__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pages_in_Template__c</fullName>
    <description>This field is not needed now that the number of pages in a pdf is determined and set automatically.</description>
    <inlineHelpText>This field is not needed now that the number of pages in a pdf is determined and set automatically.</inlineHelpText>
    <label>xxNumber of Pages in Template</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>