force-app/main/default/objects/APXTConga4__Conga_Template__c/fields/Payment_Plan__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Plan</label>
    <type>Checkbox</type>
</CustomField>