force-app/main/default/objects/APXTConga4__Conga_Template__c/fields/Welcome_Insert__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Welcome Insert</label>
    <type>Checkbox</type>
</CustomField>