force-app/main/default/objects/APXTConga4__Conga_Template__c/listViews/CS_Billing.listView-meta.xml
<ListView>
    <fullName>CS_Billing</fullName>
    <columns>NAME</columns>
    <columns>APXTConga4__Name__c</columns>
    <columns>APXTConga4__Template_Group__c</columns>
    <columns>Number_of_Pages_in_Template__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>APXTConga4__Template_Group__c</field>
        
            <operation>contains</operation>
        
            <value>CS BILLING</value>
        
        </filters>
    <label>CS Billing</label>
    <sharedTo>
        
            <allInternalUsers/>
        
        </sharedTo>
</ListView>